force-app/main/default/objects/Purpose__c/Purpose__c.object-meta.xml
<CustomObject>
    <label>Purpose</label>
    <nameField>
        <label>Purpose Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purposes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>