force-app/main/default/objects/Purpose__c/fields/ParentPurpose__c.field-meta.xml
<CustomField>
    <fullName>ParentPurpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Purpose</label>
    <referenceTo>Purpose__c</referenceTo>
    <relationshipLabel>Child Purposes</relationshipLabel>
    <relationshipName>PurposeChildren</relationshipName>
    <type>Lookup</type>
</CustomField>