force-app/main/default/objects/Purpose__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <label>Practice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>