force-app/main/default/objects/Purpose__c/fields/PurposeCode__c.field-meta.xml
<CustomField>
    <fullName>PurposeCode__c</fullName>
    <label>Purpose Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>